# agentic-fabric

./: .gitignore  .release-please-manifest.json  AGENTIC_REINFORCEMENT.md  AGENTS.md  README.md  SECRETS_SYNC_ALIGNMENT.md  pyproject.toml  release-please-config.json  tox.ini
.github/: dependabot.yml
.github/workflows/: automerge.yml  cd.yml  ci.yml  codeql.yml  e2e-ollama.yml  release.yml
docs/: agentic-workflows.rst  architecture.rst  conf.py  development.rst  getting-started.rst  index.rst  pillars.rst  vendor-fabric.rst
docs/api/: index.rst
