[project]
name = "agentic-fabric-workspace"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/agentic-fabric",
    "packages/pytest-agentic-fabric",
]

[tool.uv.sources]
agentic-fabric = { workspace = true }
pytest-agentic-fabric = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.8.0",
    "tox>=4.11",
    "tox-gh>=1.3",
    "tox-uv>=1.11",
]
